Using Layout and Introducing Material

--- a/app/views/layouts/supercache/application.html.erb
+++ b/app/views/layouts/supercache/application.html.erb
@@ -1,1 +1,17 @@
-<%= yield %>
+<!DOCTYPE html>
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+</head>
+<body>
+  <br><br><br><br><br>
+  <main>
+    <div class="container">
+      <center>
+      <%= yield %>
+      </center>
+    </div>
+  </main>
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
+</body>
+</html>
