--- a/app/views/supercache/dashboard/index.html.erb
+++ b/app/views/supercache/dashboard/index.html.erb
@@ -11,7 +11,7 @@
       </td>
     </tr>
     <tr>
-      <td><h5>HTTParty Cache</h5></td>
+      <td><h5>HTTP Cache</h5></td>
       <td>
         <% if @http_cache %>
           <%= link_to 'ON', flip_dashboard_index_path(cache: 'http_supercache'), class: 'right waves-effect waves-light btn green darken-3' %>
