--- a/app/views/layouts/supercache/application.html.erb
+++ b/app/views/layouts/supercache/application.html.erb
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <head>
-  <%= stylesheet_link_tag "supercache", media: "all" %>
-  <%= javascript_include_tag "supercache" %>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+  <style>
+    .container{ max-width: 600px; }
+    .btn{ min-width: 90px; }
+  </style>
 </head>
 <body>
   <br><br><br><br><br>
@@ -10,6 +13,8 @@
       <%= yield %>
     </div>
   </main>
-  <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/turbolinks/5.0.0/turbolinks.min.js'></script> -->
+  <!-<script src='https://cdnjs.cloudflare.com/ajax/libs/turbolinks/5.0.0/turbolinks.min.js'></script> -->
+  <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>   
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js'></script>
 </body>
 </html>
